# ProyectoCNNFinal

./: Entrenar_CNN.ipynb  README.md  pyproject.toml  train_binary.py  train_multiclass.py
app/: app_streamlit.py
models/: modelo_multiclase.h5
server/: application.py
